# verbosity-rs

./: Cargo.toml  README.md
src/: lib.rs  tests.rs  verbosity.rs
